--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple_action",
   "version": "1.0.0",
-  "description": "",
+  "description": "[Reference](https://docs.github.com/en/actions/creating-actions/creating-a-javascript-action)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
