--- a/package.json
+++ b/package.json
@@ -1,460 +1,38 @@
 {
-  "name": "simple_action",
+  "name": "autograding",
   "version": "1.0.0",
-  "description": "[Reference](https://docs.github.com/en/actions/creating-actions/creating-a-javascript-action)",
-  "main": "index.js",
-  "dependencies": {
-    "abab": "^2.0.5",
-    "acorn-globals": "^4.3.4",
-    "acorn-jsx": "^5.3.1",
-    "acorn": "^7.4.1",
-    "ansi-styles": "^3.2.1",
-    "ansi-escapes": "^4.3.1",
-    "ansi-regex": "^5.0.0",
-    "arr-diff": "^4.0.0",
-    "anymatch": "^3.1.1",
-    "ajv": "^6.12.6",
-    "acorn-walk": "^6.2.0",
-    "arr-flatten": "^1.1.0",
-    "arr-union": "^3.1.0",
-    "argparse": "^1.0.10",
-    "array-unique": "^0.3.2",
-    "array-equal": "^1.0.0",
-    "assign-symbols": "^1.0.0",
-    "asn1": "^0.2.4",
-    "assert-plus": "^1.0.0",
-    "astral-regex": "^1.0.0",
-    "atob": "^2.1.2",
-    "asynckit": "^0.4.0",
-    "atob-lite": "^2.0.0",
-    "aws-sign2": "^0.7.0",
-    "babel-jest": "^25.5.1",
-    "aws4": "^1.11.0",
-    "babel-plugin-istanbul": "^6.0.0",
-    "babel-plugin-jest-hoist": "^25.5.0",
-    "babel-preset-jest": "^25.5.0",
-    "balanced-match": "^1.0.0",
-    "babel-preset-current-node-syntax": "^0.1.4",
-    "bcrypt-pbkdf": "^1.0.2",
-    "before-after-hook": "^2.1.1",
-    "brace-expansion": "^1.1.11",
-    "braces": "^3.0.2",
-    "browser-resolve": "^1.11.3",
-    "base": "^0.11.2",
-    "browser-process-hrtime": "^1.0.0",
-    "bs-logger": "^0.2.6",
-    "buffer-from": "^1.1.1",
-    "btoa-lite": "^1.0.0",
-    "bser": "^2.1.1",
-    "cache-base": "^1.0.1",
-    "callsites": "^3.1.0",
-    "camelcase": "^5.3.1",
-    "capture-exit": "^2.0.0",
-    "chardet": "^0.7.0",
-    "ci-info": "^2.0.0",
-    "caseless": "^0.12.0",
-    "class-utils": "^0.3.6",
-    "cli-width": "^3.0.0",
-    "chalk": "^2.4.2",
-    "cli-cursor": "^3.1.0",
-    "co": "^4.6.0",
-    "cliui": "^6.0.0",
-    "collection-visit": "^1.0.0",
-    "combined-stream": "^1.0.8",
-    "collect-v8-coverage": "^1.0.1",
-    "color-convert": "^1.9.3",
-    "concat-map": "^0.0.1",
-    "color-name": "^1.1.3",
-    "component-emitter": "^1.3.0",
-    "convert-source-map": "^1.7.0",
-    "core-util-is": "^1.0.2",
-    "copy-descriptor": "^0.1.1",
-    "cssom": "^0.4.4",
-    "cross-spawn": "^6.0.5",
-    "data-urls": "^1.1.0",
-    "cssstyle": "^2.3.0",
-    "debug": "^4.3.1",
-    "dashdash": "^1.14.1",
-    "decode-uri-component": "^0.2.0",
-    "decamelize": "^1.2.0",
-    "deep-is": "^0.1.3",
-    "deepmerge": "^4.2.2",
-    "define-property": "^2.0.2",
-    "delayed-stream": "^1.0.0",
-    "detect-newline": "^3.1.0",
-    "diff-sequences": "^25.2.6",
-    "deprecation": "^2.3.1",
-    "ecc-jsbn": "^0.1.2",
-    "emoji-regex": "^8.0.0",
-    "doctrine": "^3.0.0",
-    "end-of-stream": "^1.4.4",
-    "error-ex": "^1.3.2",
-    "escape-string-regexp": "^1.0.5",
-    "domexception": "^1.0.1",
-    "escodegen": "^1.14.3",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-scope": "^5.1.1",
-    "eslint-visitor-keys": "^1.3.0",
-    "eslint-utils": "^2.1.0",
-    "esprima": "^4.0.1",
-    "espree": "^6.2.1",
-    "estraverse": "^4.3.0",
-    "esrecurse": "^4.3.0",
-    "esquery": "^1.4.0",
-    "esutils": "^2.0.3",
-    "exec-sh": "^0.3.4",
-    "execa": "^3.4.0",
-    "exit": "^0.1.2",
-    "expand-brackets": "^2.1.4",
-    "extend": "^3.0.2",
-    "expect": "^25.5.0",
-    "external-editor": "^3.1.0",
-    "extend-shallow": "^3.0.2",
-    "extsprintf": "^1.3.0",
-    "extglob": "^2.0.4",
-    "fast-deep-equal": "^3.1.3",
-    "fast-levenshtein": "^2.0.6",
-    "fast-diff": "^1.2.0",
-    "fast-json-stable-stringify": "^2.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "fb-watchman": "^2.0.1",
-    "file-entry-cache": "^5.0.1",
-    "fill-range": "^7.0.1",
-    "figures": "^3.2.0",
-    "find-up": "^4.1.0",
-    "flatted": "^2.0.2",
-    "flat-cache": "^2.0.1",
-    "for-in": "^1.0.2",
-    "forever-agent": "^0.6.1",
-    "form-data": "^2.3.3",
-    "fs.realpath": "^1.0.0",
-    "fragment-cache": "^0.2.1",
-    "function-bind": "^1.1.1",
-    "fsevents": "^2.3.2",
-    "gensync": "^1.0.0-beta.2",
-    "get-package-type": "^0.1.0",
-    "get-caller-file": "^2.0.5",
-    "get-stdin": "^6.0.0",
-    "get-stream": "^5.2.0",
-    "functional-red-black-tree": "^1.0.1",
-    "get-value": "^2.0.6",
-    "getpass": "^0.1.7",
-    "glob": "^7.1.6",
-    "glob-parent": "^5.1.1",
-    "graceful-fs": "^4.2.5",
-    "globals": "^12.4.0",
-    "growly": "^1.3.0",
-    "has": "^1.0.3",
-    "har-schema": "^2.0.0",
-    "has-flag": "^3.0.0",
-    "har-validator": "^5.1.5",
-    "has-value": "^1.0.0",
-    "html-encoding-sniffer": "^1.0.2",
-    "has-values": "^1.0.0",
-    "hosted-git-info": "^2.8.8",
-    "html-escaper": "^2.0.2",
-    "http-signature": "^1.2.0",
-    "iconv-lite": "^0.4.24",
-    "human-signals": "^1.1.1",
-    "import-fresh": "^3.3.0",
-    "import-local": "^3.0.2",
-    "imurmurhash": "^0.1.4",
-    "ignore": "^4.0.6",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-accessor-descriptor": "^1.0.0",
-    "inquirer": "^7.3.3",
-    "ip-regex": "^2.1.0",
-    "is-arrayish": "^0.2.1",
-    "is-ci": "^2.0.0",
-    "is-buffer": "^1.1.6",
-    "is-core-module": "^2.2.0",
-    "is-data-descriptor": "^1.0.0",
-    "is-extglob": "^2.1.1",
-    "is-descriptor": "^1.0.2",
-    "is-docker": "^2.1.1",
-    "is-extendable": "^1.0.1",
-    "is-generator-fn": "^2.1.0",
-    "is-number": "^7.0.0",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-glob": "^4.0.1",
-    "is-stream": "^2.0.0",
-    "is-typedarray": "^1.0.0",
-    "is-plain-object": "^5.0.0",
-    "isarray": "^1.0.0",
-    "is-wsl": "^2.2.0",
-    "isexe": "^2.0.0",
-    "is-windows": "^1.0.2",
-    "isstream": "^0.1.2",
-    "isobject": "^3.0.1",
-    "istanbul-lib-instrument": "^4.0.3",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-lib-coverage": "^3.0.0",
-    "istanbul-lib-source-maps": "^4.0.0",
-    "istanbul-reports": "^3.0.2",
-    "jest-changed-files": "^25.5.0",
-    "jest": "^25.5.4",
-    "jest-cli": "^25.5.4",
-    "jest-docblock": "^25.3.0",
-    "jest-environment-jsdom": "^25.5.0",
-    "jest-each": "^25.5.0",
-    "jest-config": "^25.5.4",
-    "jest-haste-map": "^25.5.1",
-    "jest-diff": "^25.5.0",
-    "jest-environment-node": "^25.5.0",
-    "jest-get-type": "^25.2.6",
-    "jest-jasmine2": "^25.5.4",
-    "jest-matcher-utils": "^25.5.0",
-    "jest-leak-detector": "^25.5.0",
-    "jest-pnp-resolver": "^1.2.2",
-    "jest-mock": "^25.5.0",
-    "jest-regex-util": "^25.2.6",
-    "jest-resolve-dependencies": "^25.5.4",
-    "jest-runtime": "^25.5.4",
-    "jest-resolve": "^25.5.1",
-    "jest-message-util": "^25.5.0",
-    "jest-runner": "^25.5.4",
-    "jest-serializer": "^25.5.0",
-    "jest-util": "^25.5.0",
-    "jest-validate": "^25.5.0",
-    "jest-watcher": "^25.5.0",
-    "js-yaml": "^3.14.1",
-    "js-tokens": "^4.0.0",
-    "jest-worker": "^25.5.0",
-    "jest-snapshot": "^25.5.1",
-    "jsbn": "^0.1.1",
-    "jsesc": "^2.5.2",
-    "jsdom": "^15.2.1",
-    "json-schema": "^0.2.3",
-    "json-schema-traverse": "^0.4.1",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json-stringify-safe": "^5.0.1",
-    "jsprim": "^1.4.1",
-    "kleur": "^3.0.3",
-    "json5": "^2.2.0",
-    "leven": "^3.1.0",
-    "kind-of": "^6.0.3",
-    "lodash.memoize": "^4.1.2",
-    "levn": "^0.3.0",
-    "lines-and-columns": "^1.1.6",
-    "locate-path": "^5.0.0",
-    "lodash.get": "^4.4.2",
-    "lodash": "^4.17.20",
-    "lodash.sortby": "^4.7.0",
-    "lodash.uniq": "^4.5.0",
-    "lodash.set": "^4.3.2",
-    "lolex": "^5.1.2",
-    "macos-release": "^2.4.1",
-    "lru-cache": "^6.0.0",
-    "make-error": "^1.3.6",
-    "make-dir": "^3.1.0",
-    "makeerror": "^1.0.11",
-    "map-cache": "^0.2.2",
-    "map-visit": "^1.0.0",
-    "merge-stream": "^2.0.0",
-    "micromatch": "^4.0.2",
-    "mime-db": "^1.45.0",
-    "mimic-fn": "^2.1.0",
-    "minimatch": "^3.0.4",
-    "mime-types": "^2.1.28",
-    "minimist": "^1.2.5",
-    "mkdirp": "^0.5.5",
-    "natural-compare": "^1.4.0",
-    "mute-stream": "^0.0.8",
-    "ms": "^2.1.2",
-    "nice-try": "^1.0.5",
-    "nanomatch": "^1.2.13",
-    "nock": "^11.9.1",
-    "mixin-deep": "^1.3.2",
-    "node-fetch": "^2.6.1",
-    "node-int64": "^0.4.0",
-    "normalize-path": "^3.0.0",
-    "node-modules-regexp": "^1.0.0",
-    "node-notifier": "^6.0.0",
-    "npm-run-path": "^4.0.1",
-    "nwsapi": "^2.2.0",
-    "oauth-sign": "^0.9.0",
-    "object-copy": "^0.1.0",
-    "normalize-package-data": "^2.5.0",
-    "octokit-pagination-methods": "^1.1.0",
-    "object-visit": "^1.0.1",
-    "onetime": "^5.1.2",
-    "object.pick": "^1.3.0",
-    "once": "^1.4.0",
-    "optionator": "^0.8.3",
-    "p-each-series": "^2.2.0",
-    "os-tmpdir": "^1.0.2",
-    "os-name": "^3.1.0",
-    "p-finally": "^2.0.1",
-    "p-locate": "^4.1.0",
-    "parent-module": "^1.0.1",
-    "p-limit": "^2.3.0",
-    "p-try": "^2.2.0",
-    "parse-json": "^5.2.0",
-    "pascalcase": "^0.1.1",
-    "parse5": "^5.1.0",
-    "path-key": "^2.0.1",
-    "path-exists": "^4.0.0",
-    "path-parse": "^1.0.6",
-    "path-is-absolute": "^1.0.1",
-    "picomatch": "^2.2.2",
-    "performance-now": "^2.1.0",
-    "pkg-dir": "^4.2.0",
-    "pirates": "^4.0.1",
-    "pn": "^1.1.0",
-    "prelude-ls": "^1.1.2",
-    "posix-character-classes": "^0.1.1",
-    "prettier": "^1.19.1",
-    "prettier-linter-helpers": "^1.0.0",
-    "pretty-format": "^25.5.0",
-    "progress": "^2.0.3",
-    "propagate": "^2.0.1",
-    "prompts": "^2.4.0",
-    "psl": "^1.8.0",
-    "qs": "^6.5.2",
-    "punycode": "^2.1.1",
-    "pump": "^3.0.0",
-    "read-pkg": "^5.2.0",
-    "react-is": "^16.13.1",
-    "realpath-native": "^2.0.0",
-    "regex-not": "^1.0.2",
-    "regexpp": "^3.1.0",
-    "read-pkg-up": "^7.0.1",
-    "remove-trailing-separator": "^1.1.0",
-    "repeat-string": "^1.6.1",
-    "request-promise-core": "^1.1.4",
-    "request": "^2.88.2",
-    "repeat-element": "^1.1.3",
-    "request-promise-native": "^1.0.9",
-    "require-main-filename": "^2.0.0",
-    "require-directory": "^2.1.1",
-    "resolve-cwd": "^3.0.0",
-    "resolve": "^1.19.0",
-    "resolve-from": "^4.0.0",
-    "resolve-url": "^0.2.1",
-    "restore-cursor": "^3.1.0",
-    "rimraf": "^2.6.3",
-    "ret": "^0.1.15",
-    "rsvp": "^4.8.5",
-    "run-async": "^2.4.1",
-    "rxjs": "^6.6.3",
-    "safe-buffer": "^5.1.2",
-    "sane": "^4.1.0",
-    "safer-buffer": "^2.1.2",
-    "safe-regex": "^1.1.0",
-    "set-value": "^2.0.1",
-    "saxes": "^3.1.11",
-    "semver": "^7.3.4",
-    "set-blocking": "^2.0.0",
-    "shebang-command": "^1.2.0",
-    "shellwords": "^0.1.1",
-    "shebang-regex": "^1.0.0",
-    "signal-exit": "^3.0.3",
-    "slice-ansi": "^2.1.0",
-    "slash": "^3.0.0",
-    "sisteransi": "^1.0.5",
-    "snapdragon-node": "^2.1.1",
-    "snapdragon": "^0.8.2",
-    "source-map-resolve": "^0.5.3",
-    "snapdragon-util": "^3.0.1",
-    "source-map": "^0.6.1",
-    "source-map-support": "^0.5.19",
-    "source-map-url": "^0.4.1",
-    "spdx-correct": "^3.1.1",
-    "spdx-exceptions": "^2.3.0",
-    "split-string": "^3.1.0",
-    "spdx-license-ids": "^3.0.7",
-    "sprintf-js": "^1.0.3",
-    "spdx-expression-parse": "^3.0.1",
-    "sshpk": "^1.16.1",
-    "stack-utils": "^1.0.4",
-    "static-extend": "^0.1.2",
-    "string-width": "^4.2.0",
-    "string-length": "^3.1.0",
-    "strip-bom": "^4.0.0",
-    "stealthy-require": "^1.1.1",
-    "strip-eof": "^1.0.0",
-    "strip-ansi": "^5.2.0",
-    "strip-json-comments": "^3.1.1",
-    "strip-final-newline": "^2.0.0",
-    "supports-hyperlinks": "^2.1.0",
-    "symbol-tree": "^3.2.4",
-    "supports-color": "^5.5.0",
-    "terminal-link": "^2.1.1",
-    "table": "^5.4.6",
-    "test-exclude": "^6.0.0",
-    "text-table": "^0.2.0",
-    "throat": "^5.0.0",
-    "tmpl": "^1.0.4",
-    "tmp": "^0.0.33",
-    "through": "^2.3.8",
-    "to-fast-properties": "^2.0.0",
-    "to-regex": "^3.0.2",
-    "to-object-path": "^0.3.0",
-    "tough-cookie": "^3.0.1",
-    "to-regex-range": "^5.0.1",
-    "tr46": "^1.0.1",
-    "tree-kill": "^1.2.2",
-    "tslib": "^1.14.1",
-    "ts-jest": "^25.5.1",
-    "tunnel": "^0.0.6",
-    "tunnel-agent": "^0.6.0",
-    "tsutils": "^3.20.0",
-    "type-check": "^0.3.2",
-    "tweetnacl": "^0.14.5",
-    "type-fest": "^0.8.1",
-    "type-detect": "^4.0.8",
-    "typedarray-to-buffer": "^3.1.5",
-    "typescript": "^3.9.7",
-    "universal-user-agent": "^6.0.0",
-    "union-value": "^1.0.1",
-    "unset-value": "^1.0.0",
-    "urix": "^0.1.0",
-    "uri-js": "^4.4.1",
-    "uuid": "^7.0.3",
-    "use": "^3.1.1",
-    "v8-compile-cache": "^2.2.0",
-    "v8-to-istanbul": "^4.1.4",
-    "validate-npm-package-license": "^3.0.4",
-    "verror": "^1.10.0",
-    "w3c-xmlserializer": "^1.1.2",
-    "w3c-hr-time": "^1.0.2",
-    "webidl-conversions": "^4.0.2",
-    "walker": "^1.0.7",
-    "whatwg-mimetype": "^2.3.0",
-    "whatwg-encoding": "^1.0.5",
-    "whatwg-url": "^7.1.0",
-    "which": "^1.3.1",
-    "which-module": "^2.0.0",
-    "windows-release": "^3.3.3",
-    "word-wrap": "^1.2.3",
-    "wrap-ansi": "^6.2.0",
-    "write-file-atomic": "^3.0.3",
-    "write": "^1.0.3",
-    "wrappy": "^1.0.2",
-    "ws": "^7.4.3",
-    "xml-name-validator": "^3.0.0",
-    "y18n": "^4.0.1",
-    "yallist": "^4.0.0",
-    "yargs": "^15.4.1",
-    "yargs-parser": "^18.1.3",
-    "xmlchars": "^2.2.0"
-  },
-  "devDependencies": {},
+  "description": "A modification of autograding GitHub Classroom",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --noEmit && ncc build helper.ts -o dist"
+  },
+  "keywords": [
+    "github",
+    "education",
+    "classroom",
+    "autograding"
+  ],
+  "author": "Hikmat Farhat",
+  "license": "ISC",
+  "dependencies": {
+    "@actions/core": "^1.2.6",
+    "@actions/github": "^2.2.0",
+    "tree-kill": "^1.2.2",
+    "uuid": "^7.0.1"
+  },
+  "devDependencies": {
+    "@types/nock": "^11.1.0",
+    "@types/node": "^13.5.3",
+    "@types/uuid": "^7.0.0",
+    "@zeit/ncc": "^0.21.0",
+    "typescript": "^3.7.5"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hikmatfarhat-ndu/simple_action.git"
+    "url": "git+https://github.com/hikmatfarhat-ndu/my_autograding.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hikmatfarhat-ndu/simple_action/issues"
+    "url": "https://github.com/hikmatfarhat-ndu/my_autograding/issues"
   },
-  "homepage": "https://github.com/hikmatfarhat-ndu/simple_action#readme"
+  "homepage": "https://github.com/hikmatfarhat-ndu/my_autograding#readme"
 }
