--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,8 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
+  github-token:
+    required: true
 outputs:
   time: # id of output
     description: 'The time we greeted you'
